--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,31 @@
-<mat-toolbar>
-  <span>My Application</span>
-</mat-toolbar>
-
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport="true"
+    [attr.role]="isHandset ? 'dialog' : 'navigation'"
+    [mode]="(isHandset | async)!.matches ? 'over' : 'side'"
+    [opened]="!(isHandset | async)!.matches">
+    <mat-toolbar color="primary">Menu</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item href="#">Customers</a>
+      <a mat-list-item href="#">Products</a>
+      <a mat-list-item href="#">About</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="(isHandset | async)!.matches"
+        >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <span>Application Title 2</span>
+    </mat-toolbar>
+    <app-customers-list ></app-customers-list>
+  </mat-sidenav-content>
+</mat-sidenav-container>
