show customer into cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
       </button>
       <span>Application Title 2</span>
     </mat-toolbar>
-    <app-customers-list ></app-customers-list>
+    <app-customers-list class="container" ></app-customers-list>
   </mat-sidenav-content>
 </mat-sidenav-container>
